--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap-4-grid": "^2.4.1",
     "braces": "^2.3.2",
     "jquery": "^3.5.1",
-    "natives": "^1.1.6"
+    "natives": "^1.1.6",
+    "swiper": "^7.0.3"
   }
 }
